qa-demo-19 add kafka producer example